# KnowMoreDiRT

./: README.md  pyproject.toml
docs/: architecture.md  capability_parity_migration.json  capability_parity_migration.md  drt_centered_rebuild_report.md  drt_generalization_run_2026-05-27.md  drt_rebuild_report.md  evaluation.md  evaluation_report.md  hard_reasoning_fixture.md  herb_failure_analogue_coverage.md  implementation_report.md  llm_dspg_progress_report.md  public_api.md  public_contract.md  raw_folder_architecture_audit.json  raw_folder_architecture_audit.md  test_corpus_report.md  theory.md
docs/papers/: README.md
scripts/: evaluate_fixture.py
scripts/benchmarks/: run_herb_kmd_raw_folder.py
src/knowmoredirt/: __init__.py  answer_types.py  bounded_dspg.py  drs.py  engine.py  evaluation.py  extractors.py  index.py  ingest.py  legacy_drt_path.py  model.py  model_planner.py  models.py  public.py  query.py  relations.py  scanner.py  semantic_cache.py  store.py  text.py
tests/: conftest.py  test_fixture_contract.py  test_public_contract.py
tests/evaluation/: test_broad_and_noise_evaluation.py  test_hard_raw_reasoning_evaluation.py  test_messy_corpus_evaluation.py
tests/fixtures/: broad_raw_world_qa.json  hard_raw_reasoning_failure_map.json  hard_raw_reasoning_qa.json  hardcore_noise_qa.json  messy_raw_corpus_qa.json
tests/smoke/: test_public_api.py
tests/unit/: test_answer_type_and_model_extraction.py  test_architecture_contract.py  test_broad_fixture_contract.py  test_capability_recovery.py  test_chunk_drs_staged_fallback.py  test_dspg_store.py  (+6 more)
(+97 files in other folders)
