[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "knowmoredirt"
version = "0.1.0"
description = "Test-first raw-folder foundation for KnowMoreDiRT."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "KnowMoreDiRT contributors" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

